objects/SAP_Order__c.object
<CustomObject>
    <description>Captures SAP Orders</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SAP Orders</relationshipLabel>
        <relationshipName>SAP_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Value__c</fullName>
        <label>Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Value__c</fullName>
        <label>Subscription Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TempExternalId__c</fullName>
        <description>This can be used for the initial loads to hold the Siebel Row Id</description>
        <externalId>true</externalId>
        <label>TempExternalId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Order_Number__c</fullName>
        <label>Web Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SAP Order</label>
    <nameField>
        <displayFormat>SAP{YYYY}{MM}{DD}{0000000}</displayFormat>
        <label>Order Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>